--- a/config-client-dev.properties
+++ b/config-client-dev.properties
@@ -6,3 +6,22 @@ democonfigclient.message=hello spring io
 # zuul.routes.api-a-url.path=/userapi/**
 # zuul.routes.api-a-url.url=http://localhost:8881/
 #eureka.client.serviceUrl.defaultZone=http://localhost:8880/eureka/
+
+#mysql相关配置信息
+spring.datasource.url=jdbc:mysql://localhost/mysql?characterEncoding=utf8
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.initialSize=5
+spring.datasource.maxActive=200
+spring.datasource.minIdle=5
+spring.datasource.maxWait=60000
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=select 'x'
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxOpenPreparedStatements=20
+spring.datasource.testOnBorrow=false
